--- a/AUTHORS
+++ b/AUTHORS
@@ -287,5 +287,5 @@ Shirley He <she@edx.org>
 Po Tsui <potsui@stanford.edu>
 Rabia Iftikhar <rabiaiftikhar2392@gmail.com>
 Matt Tuchfarber <mtuchfarber@edx.org>
-Stuart Young <syoung@edx.org>
+Stu Young <syoung@edx.org>
 Michael Youngstrom <myoungstrom@edx.org>
